cambios sobre los controladores

--- a/FirstMVC_SQL/appsettings.json
+++ b/FirstMVC_SQL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexionPredeterminada": "Data Source=EC04267;Initial Catalog=ContactsDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "conexionPredeterminada": "Data Source=EC04267;Initial Catalog=ContactsDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
   }
 }
